# trabajoprogwebII

raiz_proyecto/: .gitignore  README.md  pyproject.toml
raiz_proyecto/src/pagina_app/: run.py
raiz_proyecto/src/pagina_app/templates/: 404.html  base_template.html  login_form.html  task_view.html
raiz_proyecto/src/pagina_app/templates/admin/: signup_form.html  task_form.html
todo_flask_app/src/todo_app/: forms.py  models.py
todo_flask_app/src/todo_app/static/: style.css
todo_flask_app/src/todo_app/templates/: index.html
